--- a/src/main/webapp/WEB-INF/templates/admin/service.html
+++ b/src/main/webapp/WEB-INF/templates/admin/service.html
@@ -268,7 +268,7 @@
 
      var dodai = document.getElementById("dodai").value;
      var a = parseInt(dodai);
-     for(var i = 1;i<=a+10;i++){
+     for(var i = 10;i<=30;i++){
        var name = "#editor"  + i
        ClassicEditor.create(document.querySelector(name)).then(eidt => {
          console.log("da" + eidt);
