--- a/src/main/webapp/WEB-INF/templates/user/detailweddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/detailweddinghall.html
@@ -87,7 +87,7 @@
         </script>
         <div class="about__content">
           <div class="about__title"><span th:text="${weddinghall.name}"></span></div>
-          <p class="about__text" style="font-weight: bold">Mô tả: <span th:text="${weddinghall.description}"></span></p>
+          <p class="about__text" style="font-weight: bold">Mô tả: <span th:utext="${weddinghall.description}"></span></p>
 
 
           <!-- <div class="button button_about">
