--- a/src/main/webapp/WEB-INF/templates/user/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/user/fragments.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
 <head th:fragment="html_head">
     <meta charset="UTF-8">
-    <title>ViVuViet</title>
+    <title>Tiệc cưới</title>
     <link rel="stylesheet" type="text/css" th:href="@{/user/assets/css/main_style.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/user/assets/css/Animation.css}">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
@@ -56,6 +56,12 @@
             });
         })
     </script>
+    <style>
+        ::placeholder {
+            color: white;
+
+        }
+    </style>
 </head>
 <body>
 <div id="wrapper">
