--- a/src/main/webapp/WEB-INF/templates/user/search.html
+++ b/src/main/webapp/WEB-INF/templates/user/search.html
@@ -17,7 +17,7 @@
                      style="background-image: url(styles/images/offers_slide.jpg)"></div>-->
                 <div class="home__content">
                     <div style="color: #31124b" class="home__title animated bounceInLeft">
-                        SẢNH CƯỚI
+                        KẾT QUẢ TÌM KIẾM
                     </div>
                 </div>
             </div>
@@ -28,52 +28,7 @@
             <div class="box offers__box1">
                 <div class="offers_sorting_container">
                     <ul class="offers_sorting">
-                        <li id="offer_1">
-                            <span class="sorting_text">Giá</span>
-                            <i class="fas fa-angle-down"></i>
-                            <ul id="offer_box_1" class="animated fadeInUp">
-                                <li class="sort_btn"><span>Hiện tất cả</span></li>
-                                <li class="sort_btn"><span>Tăng dần</span></li>
-                                <li class="sort_btn"><span>Giảm dần</span></li>
-                            </ul>
-                        </li>
-                        <li id="offer_2">
-                            <span class="sorting_text">Thứ tự</span>
-                            <i class="fas fa-angle-down"></i>
-                            <ul id="offer_box_2">
-                                <li class="sort_btn"><span>Mặc định</span></li>
-                                <li class="sort_btn"><span>Bảng chữ cái</span></li>
-                            </ul>
-                        </li>
-                        <li id="offer_3">
-                            <span class="sorting_text">Sao</span>
-                            <i class="fas fa-angle-down"></i>
-                            <ul id="offer_box_3">
-                                <li class="filter_btn" data-filter="*"><span>Hiện tất cả</span></li>
-                                <li class="sort_btn"><span>Giảm dần</span></li>
-                                <li class="filter_btn" data-filter=".rating_3"><span>3</span></li>
-                                <li class="filter_btn" data-filter=".rating_4"><span>4</span></li>
-                                <li class="filter_btn" data-filter=".rating_5"><span>5</span></li>
-                            </ul>
-                        </li>
-                        <li id="offer_4">
-                            <span class="sorting_text">Khoảng cách</span>
-                            <i class="fas fa-angle-down"></i>
-                            <ul id="offer_box_4">
-                                <li class="num_sorting_btn"><span>50Km</span></li>
-                                <li class="num_sorting_btn"><span>100Km</span></li>
-                                <li class="num_sorting_btn"><span>200Km</span></li>
-                            </ul>
-                        </li>
-                        <li id="offer_5">
-                            <span class="sorting_text">Đánh giá</span>
-                            <i class="fas fa-angle-down"></i>
-                            <ul id="offer_box_5">
-                                <li class="num_sorting_btn"><span>Very Good</span></li>
-                                <li class="num_sorting_btn"><span>Good</span></li>
-                                <li class="num_sorting_btn"><span>Medium</span></li>
-                            </ul>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -96,7 +51,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <p class="offers_text" th:text="${weddinghall.description}"></p>
+                                <p class="offers_text" th:utext="${weddinghall.description}"></p>
                                 <div class="offers_icons">
                                     <ul class="offers_icons_list">
                                         <li class="offers_icons_item"><img src="styles/images/post.png" alt=""></li>
@@ -105,14 +60,14 @@
                                         <li class="offers_icons_item"><img src="styles/images/sailboat.png" alt=""></li>
                                     </ul>
                                 </div>
-                                <div class="button book_button"><a href="#">book<span></span><span></span><span></span></a>
+                                <div class="button book_button">
                                 </div>
                                 <div class="offer_reviews">
                                     <div class="offer_reviews_content">
                                         <div class="offer_reviews_title">very good</div>
-                                        <div class="offer_reviews_subtitle">100 lượt xem</div>
+                                        <div class="offer_reviews_subtitle" th:text="${weddinghall.view +' lượt xem'}"> </div>
                                     </div>
-                                    <div class="offer_reviews_rating" style="text-align: center">8.0</div>
+                                    <div class="offer_reviews_rating" style="text-align: center" th:text="${weddinghall.view}"></div>
                                 </div>
                             </div>
                         </div>
