--- a/src/main/webapp/WEB-INF/templates/user/detailmenufood.html
+++ b/src/main/webapp/WEB-INF/templates/user/detailmenufood.html
@@ -87,7 +87,7 @@
                 </script>
                 <div class="about__content">
                     <div class="about__title"><span th:text="${menufood.name}"></span></div>
-                    <p class="about__text" style="font-weight: bold">Mô tả: <span th:text="${menufood.description}"></span></p>
+                    <p class="about__text" style="font-weight: bold">Mô tả: <span th:utext="${menufood.description}"></span></p>
                     <p class="about__text" style="font-weight: bold">Giá: <span th:text="${menufood.cost} ">VNĐ</span></p>
 
                    <!-- <div class="button button_about">
