--- a/src/main/webapp/WEB-INF/templates/user/weddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/weddinghall.html
@@ -19,12 +19,63 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <style>
+    .main_nav__list .main_nav__item a{
+      text-decoration: none;
+    }
+    a:hover{
+      color: white;
+    }
+    body{
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
 <div id="wrapper">
   <!-- Header -->
-  <header th:replace="user/fragments :: header_menu" class="header">
+  <header  class="header">
+    <div class="top_bar">
+      <div class="bar__info">
+        <div class="phone">+84 788 9 036</div>
+        <div class="social">
+          <ul class="social_list">
+            <li class="social_list_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="social_list_item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li class="social_list_item"><a href="#"><i class="fab fa-youtube"></i></a></li>
+          </ul>
+        </div>
 
+      </div>
+      <div th:if="${session.user}" class="bar__user">
+
+        <a th:if="${session.user.image}" th:href="@{/user/thong-tin-ca-nhan(username=${session.user.userName})}"> <img style="border-radius: 100px;margin-right: 10px"  height="30px" width="30px" th:src="@{'/user/assets/images/'+${session.user.image}}"></a>
+        <a th:unless="${session.user.image}" th:href="@{/user/thong-tin-ca-nhan(username=${session.user.userName})}"> <img style="border-radius: 100px;margin-right: 10px"  height="30px" width="30px" src="https://st.quantrimang.com/photos/image/072015/22/avatar.jpg"></a>
+        <div class="bar__user-login"><a th:href="@{/user/thong-tin-ca-nhan(username=${session.user.userName})}" th:text="${session.user.fullName}"></a></div>
+        <div class="bar__user-regis"><a href="/user/dang-xuat">Đăng xuất</a></div>
+      </div>
+      <div th:unless="${session.user}" class="bar__user">
+        <div class="bar__user-login"><a href="/user/dang-nhap">Đăng nhập</a></div>
+        <div class="bar__user-regis"><a href="/user/dang-ki">Đăng kí</a></div>
+      </div>
+    </div>
+
+    <div class="main_nav">
+      <div class="main_nav__logo" style="display: flex"><img height="50px" th:src="@{/user/assets/images/logo.png}" alt="logo"><a style="margin-top: 15px;margin-left: 7px" href="#"> TIỆC CƯỚI </a></div>
+      <div class="main_nav__menu">
+        <ul class="main_nav__list">
+          <li class="main_nav__item"><a style="text-decoration: none;" href="/trang-chu">TRANG CHỦ</a></li>
+          <li class="main_nav__item"><a href="/sanh-cuoi">SẢNH CƯỚI</a></li>
+          <li class="main_nav__item"><a href="/dich-vu-va-uu-dai">DỊCH VỤ</a></li>
+          <li class="main_nav__item"><a href="danh-sach-menu-thuc-an">MEMU THỨC ĂN</a></li>
+          <li class="main_nav__item"><a href="/lien-he">LIÊN HỆ</a></li>
+        </ul>
+      </div>
+     <!-- <div class="main_nav__search">
+        <form action="/tim-kiem" method="get"><input name="keysearch" class="input_search" type="text"></form>
+        <div class="search__item"><i class="fas fa-search"></i></div>
+      </div>-->
+    </div>
   </header>
   <div class="main">
     <div class="main__slide_offers">
@@ -69,7 +120,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                 </div>
-                <p class="offers_text" th:text="${weddinghall.description}"></p>
+                <p class="offers_text" th:utext="${weddinghall.description}"></p>
                 <div class="offers_icons">
                   <ul class="offers_icons_list">
                     <li class="offers_icons_item"><img src="styles/images/post.png" alt=""></li>
@@ -85,7 +136,7 @@
                     <div class="offer_reviews_title">very good</div>
                     <div class="offer_reviews_subtitle" th:text="${weddinghall.view}+ ' lượt xems'"></div>
                   </div>
-                  <div class="offer_reviews_rating" style="text-align: center">8.0</div>
+                  <div class="offer_reviews_rating" style="text-align: center" th:text="${weddinghall.view}"></div>
                 </div>
               </div>
             </div>
@@ -150,23 +201,7 @@
               </div>
             </div>
           </th:block>
-          <div class="modal fade" id="aa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Hóa đơn</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div id="result" class="modal-body">
 
-                </div>
-                <div class="modal-footer">
-                  <button  onclick="closeModel()" type="button" class="btn btn-danger" >OK</button>
-
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="blog_navigation">
             <ul>
               <li th:if="${numberPage>0}" class="blog_dot active" ><a th:href="@{/sanh-cuoi(page=0)}"> First</a></li>
@@ -186,6 +221,7 @@
           </div>-->
 
           <script>
+
             function onChangeDate(id) {
               var nameIDShift = "shift" + id;
               document.getElementById(nameIDShift).disabled  = false;
@@ -228,9 +264,9 @@
                   html+=data.message;
 
                   row.innerHTML = html;
-                  $(document).ready(function(){
-                    $('#aa').modal('show');
-                  });
+                  setTimeout(function(){ location.reload(); }, 3000);
+
+
                 }
               });
 
