--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -85,7 +85,7 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                         Nhân viên
                     </a>
-                    <a class="nav-link" href="/admin/tiec-cuoi">
+                    <a class="nav-link" href="/employee/tiec-cuoi">
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                         Tiệc cưới
                     </a>
