--- a/src/main/webapp/WEB-INF/templates/user/weddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/weddinghall.html
@@ -177,7 +177,7 @@
                     <div class="form-group">
                       <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn dịch vụ:</label>
                       <select disabled style="height: 100px;font-size: 12px" multiple="multiple" th:onchange="'sumCost(' +${weddinghall.id}+ ')'" th:id="'service' + ${weddinghall.id}"   class="form-control">
-                        <option style="font-size: 15px"   value="0" selected>Chọn dịch vụ</option>
+                        <option style="font-size: 15px" value="0" selected>Chọn dịch vụ</option>
                         <th:block th:each="service:${listService}">
                           <option style="font-size: 15px"  th:value="${service.id}"  th:text="${service.name}+' giá ' + ${service.cost}"></option>
                         </th:block>
@@ -259,12 +259,18 @@
                 },
                 success: function(data){
                   console.log(data);
-                  var row = document.getElementById(nameMes);
-                  var html = ""
-                  html+=data.message;
-
-                  row.innerHTML = html;
-                  setTimeout(function(){ location.reload(); }, 3000);
+                  if (data.status == "Error") {
+                    var row = document.getElementById(nameMes);
+                    var html = ""
+                    html+=data.message;
+                    row.innerHTML = html;
+                  } else {
+                    var row = document.getElementById(nameMes);
+                    var html = ""
+                    html+=data.message;
+                    row.innerHTML = html;
+                    setTimeout(function(){ location.reload(); }, 3000);
+                  }
 
 
                 }
