--- a/src/main/webapp/WEB-INF/templates/admin/booking.html
+++ b/src/main/webapp/WEB-INF/templates/admin/booking.html
@@ -112,7 +112,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <form th:action="@{/admin/booking-delete}" method="post">
+                              <form th:action="@{/employee/booking-delete}" method="post">
                                 <input type="hidden" class="form-control" id="id" name="id" th:value="${weddinghall.id}">
                                 <div class="modal-footer" style="margin-top: 20px">
                                   <button type="button" class="btn btn-secondary"
