--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -73,7 +73,7 @@
             <div class="card bg-danger text-white mb-4">
               <div class="card-body"><span th:text="${B} + ' Tiệc cưới'"></span></div>
               <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="/admin/tiec-cuoi">Xem chi tiết</a>
+                <a class="small text-white stretched-link" href="/employee/tiec-cuoi">Xem chi tiết</a>
                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
               </div>
             </div>
