--- a/src/main/webapp/WEB-INF/templates/user/weddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/weddinghall.html
@@ -154,7 +154,7 @@
                     <form action="" method="post">
                     <div class="form-group">
                       <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn ngày tổ chức:</label>
-                      <input th:onchange="'onChangeDate(' +${weddinghall.id}+ ')'" style="height: 40px;font-size: 15px" th:id="'dateHeld' + ${weddinghall.id}" required class="form-control" type="date" placeholder="Ngày tổ chức">
+                      <input th:onchange="'onChangeDate(' +${weddinghall.id}+ ')'" style="height: 40px;font-size: 15px" th:id="'dateHeld' + ${weddinghall.id}" required class="form-control" type="date" placeholder="Ngày tổ chức" th:min="${dated}">
                     </div>
                     <div class="form-group">
                       <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn ca:</label>
